--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>
+        Home Page
+    </title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Hello World</h1>
+    <p>I'll be updaing this soon :)</p>
+    <div>For now you can check out my Tic-Tac-Toe game at <a href="tic-tac-toe/game.html">Hvuntokrul's Tic-Tac-Toe</a>
+    </div>
 </body>
 </html>
