Added "also" to modal

--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -19,7 +19,7 @@
           <button type="button" class="btn btn-default symbol-select" data-dismiss="modal">x</button>
           <button type="button" class="btn btn-default symbol-select" data-dismiss="modal">o</button>
           <div>
-            <div>NOTE: You can play using numpad! Press '+' for X or '-' for O.<p>Use 1-9 keys to play the game. Enjoy :)</p></div>
+            <div>NOTE: You can also play using numpad! Press '+' for X or '-' for O.<p>Use 1-9 keys to play the game. Enjoy :)</p></div>
             <em><small>(Once a match is finished the game will restart automatically in a few seconds)</small></em>
           </div>
         </div>
