--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 	</p>
     <div>For now you can check out my Tic-Tac-Toe game at <a href="tic-tac-toe/game.html">Hvuntokrul's Tic-Tac-Toe</a>
     </div>
+	<div>
+		<a href="ng_notes/index.html">Angular</a>
+	</div>
 </body>
 </html>
