--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>For now you can check out my Tic-Tac-Toe game at <a href="tic-tac-toe/game.html">Hvuntokrul's Tic-Tac-Toe</a>
     </div>
 	<div>
-		<a href="ng_notes/index.html">Angular</a>
+		<a href="ngnotes/dist/index.html">Angular</a>
 	</div>
 </body>
 </html>
