--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
     <title>
         Hvuntokrul's Tic-Tac-Toe
     </title>
@@ -15,7 +15,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-          <h4 class="modal-title"><strong>Welcome to Hvuntokrul's Tic-Tac-Toe!</strong><br>Please select your symbol:</h4>
+          <h4 class="modal-title"><strong>Welcome to Tic-Tac-Toe!</strong><br>Please select your symbol:</h4>
           <button type="button" class="btn btn-default symbol-select" data-dismiss="modal">x</button>
           <button type="button" class="btn btn-default symbol-select" data-dismiss="modal">o</button>
           <div>
@@ -64,7 +64,7 @@
       <div class="text-center" id="reset">
       </div>
       <footer class="ftr text-center">
-        Copyright &#169; Hvuntokrul, 2016
+        Copyright &#169; Yuriy Medentsii, 2016
       </footer>
     </div>
   </div>
