--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        Hvuntokrul's Tic-Tac-Toe
+        Tic-Tac-Toe
     </title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.3.3.6.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
