Added /cat route

--- a/cat/index.html
+++ b/cat/index.html
@@ -1276,5 +1276,8 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==" type="audi
 		snd.addEventListener('ended', e => cat.className = '');
 		snd.addEventListener('play', e => cat.className = 'hype');
 		cat.addEventListener('click', e => snd.play());
+
+		// Cat image author https://theoatmeal.com/
+		// Drum sound from https://orangefreesounds.com/badum-tss/
 	</script>
 </body>
