--- a/plan/index.html
+++ b/plan/index.html
@@ -22,7 +22,9 @@
 	</style>
 </head>
 <body>
-	Plan option coming soon ...
+	<div>
+		Plan option coming very soon ...
+	</div>
 
 	<script>
 	</script>
