--- a/plan/index.html
+++ b/plan/index.html
@@ -19,6 +19,7 @@
 		@media only screen and (orientation: portrait) {
 			img { width: 100%; }
 		}
+		div { color: #fff; }
 	</style>
 </head>
 <body>
