--- a/tarot/index.html
+++ b/tarot/index.html
@@ -9,9 +9,18 @@
 			padding: 0;
 			height: 100%;
 			width: 100%;
+		}
+
+		body [
 			background: #000;
 			color: #fff;
-			font-size: 3vw;
+			font-size: 24px;
+		]
+
+		@media screen and (max-width: 900px) {
+			html, body, table {
+				font-size: 18px;
+			}
 		}
 
 		.table {
