--- a/tarot/index.html
+++ b/tarot/index.html
@@ -11,14 +11,14 @@
 			width: 100%;
 		}
 
-		body [
+		body {
 			background: #000;
 			color: #fff;
 			font-size: 24px;
-		]
+		}
 
 		@media screen and (max-width: 900px) {
-			html, body, table {
+			body {
 				font-size: 18px;
 			}
 		}
