--- a/tarot/index.html
+++ b/tarot/index.html
@@ -25,12 +25,14 @@
 
 		.table {
 			display: flex;
+			display: -webkit-flex;
 			flex-direction: row;
 		}
 
 		.cards {
-			flex: 0 1 auto;
+			flex: 0 0 auto;
 			display: flex;
+			display: -webkit-flex;
 			flex-direction: column;
 			overflow-y: auto;
 			height: 99vh;
