--- a/tarot/index.html
+++ b/tarot/index.html
@@ -42,7 +42,7 @@
 
 
 		.table {
-			font-family: 'EB Garamond', Garamond, serif;
+			font-family: "EB Garamond", Garamond, serif;
 			display: flex;
 			display: -webkit-flex;
 			flex-direction: row;
