Google fonts Garamond link added

--- a/tarot/index.html
+++ b/tarot/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Pocket Tarot App © hvuntokrul 2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap" rel="stylesheet">
 	<style>
 		html, body, .table {
 			margin: 0;
@@ -42,7 +45,7 @@
 
 
 		.table {
-			font-family: "EB Garamond", Garamond, serif;
+			font-family: "EB Garamond", serif;
 			display: flex;
 			display: -webkit-flex;
 			flex-direction: row;
