--- a/tarot/index.html
+++ b/tarot/index.html
@@ -3,26 +3,12 @@
 <head>
 	<title>Pocket Tarot App © hvuntokrul 2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
+
 	<style>
-
-		@font-face {
-			font-family: 'EB Garamond';
-			font-style: italic;
-			font-weight: 400;
-			src: url(https://fonts.gstatic.com/s/ebgaramond/v27/SlGFmQSNjdsmc35JDF1K5GRwUjcdlttVFm-rI7e8QL99U6g.woff2) format('woff2');
-		}
-
-		@font-face {
-			font-family: 'EB Garamond';
-			font-style: normal;
-			font-weight: 400;
-			/* font-display: swap; */
-			src: url(https://fonts.gstatic.com/s/ebgaramond/v27/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI9_.woff2) format('woff2');
-		}
-
 		html, body, .table {
 			margin: 0;
 			padding: 0;
@@ -33,7 +19,7 @@
 		body {
 			background: #000;
 			color: #fff;
-			font-size: 24px;
+			font-size: 23px;
 		}
 
 		@media screen and (max-width: 900px) {
@@ -61,7 +47,8 @@
 
 
 		.table {
-			font-family: "EB Garamond", Garamond, serif;
+			font-family: "IM Fell English", serif;
+
 			display: flex;
 			display: -webkit-flex;
 			flex-direction: row;
@@ -146,8 +133,8 @@
 			border: 1px solid #fff;
 		}
 
-		@media screen and (max-width: 360px) {
-			.table { min-width: 360px; }
+		@media screen and (max-width: 380px) {
+			.table { min-width: 380px; }
 		}
 
 		@media screen and (max-width: 480px) {
